[gd_scene load_steps=8 format=3 uid="uid://vjus7te10va0"]

[ext_resource type="Texture2D" uid="uid://bdhaqfftxtlwc" path="res://assets/sprites/tilemap.png" id="1_a5ryb"]
[ext_resource type="Script" uid="uid://c6gmbxag0nyd8" path="res://scenes/entities/interactibles/obstacles/smasher.gd" id="1_x2v2n"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jh3in"]
texture = ExtResource("1_a5ryb")
separation = Vector2i(1, 1)
texture_region_size = Vector2i(18, 18)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0

[sub_resource type="TileSet" id="TileSet_e8423"]
tile_size = Vector2i(18, 18)
sources/0 = SubResource("TileSetAtlasSource_jh3in")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tq0cv"]
size = Vector2(270, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k50mf"]
size = Vector2(270, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0opgx"]
size = Vector2(270, 37)

[node name="smasher" type="StaticBody2D"]
collision_layer = 15
collision_mask = 15
script = ExtResource("1_x2v2n")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_e8423")
rendering_quadrant_size = 18
format = 2
layer_0/tile_data = PackedInt32Array(-65528, 589824, 2, -65527, 589824, 2, -1, 524288, 2, -65536, 589824, 2, -65535, 589824, 2, -65534, 589824, 2, -65533, 589824, 2, -65532, 589824, 2, -65531, 589824, 2, -65530, 589824, 2, -65529, 589824, 2, -65526, 589824, 2, -65525, 589824, 2, -65524, 589824, 2, -65523, 655360, 2, 10, 524288, 805306371, 13, 524288, 805306371, 12, 524288, 805306371, 11, 524288, 805306371, 9, 524288, 805306371, 8, 524288, 805306371, 7, 524288, 805306371, 6, 524288, 805306371, 5, 524288, 805306371, 4, 524288, 805306371, 3, 524288, 805306371, 2, 524288, 805306371, 1, 524288, 805306371, 0, 524288, 805306371, 65535, 524288, 805306371)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(117, -9)
shape = SubResource("RectangleShape2D_tq0cv")

[node name="danger" type="Area2D" parent="."]
collision_layer = 12
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="danger"]
position = Vector2(117, 4.5)
shape = SubResource("RectangleShape2D_k50mf")
debug_color = Color(1, 0, 0, 0.419608)

[node name="player_zone" type="Area2D" parent="."]
collision_layer = 13
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_zone"]
position = Vector2(117, 27.5)
shape = SubResource("RectangleShape2D_0opgx")
debug_color = Color(0, 1, 0, 0.419608)

[connection signal="body_entered" from="danger" to="." method="_on_danger_body_entered"]
[connection signal="body_entered" from="player_zone" to="." method="_on_player_zone_body_entered"]
